added categories requests
